--- a/control
+++ b/control
@@ -1,9 +1,9 @@
-Package: com.phillipt.unlockchanger
-Name: UnlockChanger
+Package: nl.mfok.unlockchanger
+Name: 0UnlockChanger
 Depends: mobilesubstrate
 Version: 0.0.1
 Architecture: iphoneos-arm
-Description: Tweak which changes your ‘slide to unlock’ text
+Description: Test Tweak which changes your ‘slide to unlock’ text
 Maintainer: mfok
 Author: mfok
 Section: Tweaks
