--- a/unlockchangersub/Resources/Info.plist
+++ b/unlockchangersub/Resources/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>UnlockChanger</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.phillipt.unlockchanger~prefs</string>
+	<string>nl.mfok.unlockchanger~prefs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
