--- a/unlockchangersub/Resources/UnlockChanger.plist
+++ b/unlockchangersub/Resources/UnlockChanger.plist
@@ -16,7 +16,7 @@
 			<key>default</key>
 			<false/>
 			<key>defaults</key>
-			<string>com.phillipt.unlockchanger~prefs</string>
+			<string>nl.mfok.unlockchanger~prefs</string>
 			<key>key</key>
 			<string>enabled</string>
 			<key>label</key>
@@ -28,11 +28,31 @@
 			<key>detail</key>
 			<string>PSDetailController</string>
 			<key>defaults</key>
-			<string>com.phillipt.unlockchanger~prefs</string>
+			<string>nl.mfok.unlockchanger~prefs</string>
 			<key>key</key>
 			<string>text</string>
 			<key>label</key>
 			<string>Slider Text:</string>
+			<key>placeholder</key>
+			<string>slide to unlock</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Settings</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSEditTextCell</string>
+			<key>detail</key>
+			<string>PSDetailController</string>
+			<key>defaults</key>
+			<string>nl.mfok.unlockchanger~prefs</string>
+			<key>key</key>
+			<string>text2</string>
+			<key>label</key>
+			<string>Slider Text2:</string>
 			<key>placeholder</key>
 			<string>slide to unlock</string>
 		</dict>
