--- a/unlockchangersub/entry.plist
+++ b/unlockchangersub/entry.plist
@@ -1,10 +1,10 @@
 {
     entry = {
-	bundle = UnlockChanger;
+	bundle = UnlockChangerMFOK;
 	cell = PSLinkCell;
 	detail = UnlockChangerListController;
 	icon = UnlockChanger.png;
 	isController = 1;
-	label = UnlockChanger;
+	label = UnlockChangerMFOK;
     };
 }
