--- a/unlockchangersub/Resources/Info.plist
+++ b/unlockchangersub/Resources/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>UnlockChanger</string>
+	<string>UnlockChangerMFOK</string>
 	<key>CFBundleIdentifier</key>
 	<string>nl.mfok.unlockchanger~prefs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
