--- a/unlockchangersub/Resources/UnlockChangerMFOK.plist
+++ b/unlockchangersub/Resources/UnlockChangerMFOK.plist
@@ -89,6 +89,7 @@
 				<integer>5</integer>
 				<integer>6</integer>
 				<integer>7</integer>
+				<integer>8</integer>
 			</array>
 		</dict>
 	</array>
