--- a/unlockchangersub/Resources/UnlockChangerMFOK.plist
+++ b/unlockchangersub/Resources/UnlockChangerMFOK.plist
@@ -23,10 +23,12 @@
 			<string>PSLinkListCell</string>
 			<key>detail</key>
 			<string>PSListItemsController</string>
+			<!--string>UnlockChangerListController</string-->
 			<key>valuesDataSource</key>
 			<string>valuesSource:</string>
 			<key>titlesDataSource</key>
 			<string>titlesSource:</string>
+		</dict>
 		<dict>
 			<key>cell</key>
 			<string>PSSwitchCell</string>
