--- a/unlockchangersub/Makefile
+++ b/unlockchangersub/Makefile
@@ -4,7 +4,7 @@ include theos/makefiles/common.mk
 BUNDLE_NAME = UnlockChangerMFOK
 UnlockChangerMFOK_FILES = UnlockChangerMM.mm
 UnlockChangerMFOK_INSTALL_PATH = /Library/PreferenceBundles
-UnlockChangerMFOK_FRAMEWORKS = UIKit
+UnlockChangerMFOK_FRAMEWORKS = UIKit EventKit
 UnlockChangerMFOK_PRIVATE_FRAMEWORKS = Preferences
 UnlockChangerMFOK_LIBRARIES = applist
 
